<resources>
    <string name="app_name">Escaner Translator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Scanner Translator</string>
    <string name="nav_header_subtitle">Version 1.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Scanner Translator</string>
    <string name="menu_home">Imágenes</string>
    <string name="menu_pdf">PDFs</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_share">Compartir</string>

    <string name="texto">Cambiar tema</string>
    <string name="version">1.0.0</string>

    <string name="ReconocerTexto">OCR</string>
    <string name="TraducirTexto">Traducir</string>
    <string name="Recortar">CROP</string>
    <string name="Siguiente">Siguiente</string>
    <string name="ReconocerTXT">Texto reconocido: </string>
    <string name="TextoReconocidoET">--</string>
    <string name="TextoIdioma">Texto a traducir</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="signature_title" />
    <string name="messages_header" />
    <string name="reply_title" />
    <string name="sync_header" />
    <string name="sync_title" />
    <string name="attachment_summary_off" />
    <string name="attachment_summary_on" />
    <string name="attachment_title" />
    <string name="title_activity_camara">CamaraActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>