<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_principal">

    <fragment
        android:id="@+id/nav_principal"
        android:name="com.nick.escanertraductor.fragments.ListImages.ImageListFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_image_list" />

    <fragment
        android:id="@+id/nav_pdf"
        android:name="com.nick.escanertraductor.fragments.ListPDF.PDFListFragment"
        android:label="@string/menu_pdf"
        tools:layout="@layout/fragment_pdf_list" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.nick.escanertraductor.fragments.Settings.Settings"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>